--- a/Addon/DUGLGUI/DUGLGUI.cbp
+++ b/Addon/DUGLGUI/DUGLGUI.cbp
@@ -18,7 +18,7 @@
 					<Add option="-Wall" />
 					<Add option="-m32" />
 					<Add option="-g" />
-					<Add directory="../DUGL" />
+					<Add directory="../../" />
 				</Compiler>
 				<Linker>
 					<Add option="-static-libstdc++" />
@@ -36,8 +36,9 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-march=pentium4" />
+					<Add option="-march=corei7" />
 					<Add option="-fomit-frame-pointer" />
+					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
 					<Add option="-Wall" />
 					<Add option="-m32" />
@@ -60,9 +61,6 @@
 		<Unit filename="INTRNGUI.H" />
 		<Unit filename="STRING.CC" />
 		<Extensions>
-			<code_completion>
-				<search_path add="..\DUGL" />
-			</code_completion>
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
