--- a/TESTS/Console/Console.cbp
+++ b/TESTS/Console/Console.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="HelloWorld" />
+		<Option title="Console" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../HelloWorld" prefix_auto="1" extension_auto="1" />
+				<Option output="../Console" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -34,7 +34,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="../HelloWorld" prefix_auto="1" extension_auto="1" />
+				<Option output="../Console" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
@@ -64,7 +64,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="HelloWorld.cpp" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
