First Beta 1.0.1 - Implement Copy/paste functions, Implement Calc display/apply functions, Adds Help and About Dialogs, revert to not threaded events loop as DUGLGUI scan/render functions are not completely thread safe... lot of other improvements and bugfixes

--- a/Tools/EDCHR2/EDCHR2.cbp
+++ b/Tools/EDCHR2/EDCHR2.cbp
@@ -74,7 +74,11 @@
 			<Add directory="../DUGL/bin/Release" />
 			<Add directory="C:/SDL2.0.12/lib" />
 		</Linker>
+		<Unit filename="AboutDlg.cpp" />
+		<Unit filename="AboutDlg.h" />
 		<Unit filename="EDCHRASM.ASM" />
+		<Unit filename="HelpDlg.cpp" />
+		<Unit filename="HelpDlg.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion>
