--- a/TESTS/Sprites/Sprites.cbp
+++ b/TESTS/Sprites/Sprites.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="HelloWorld" />
+		<Option title="Sprites" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../HelloWorld" prefix_auto="1" extension_auto="1" />
+				<Option output="../Sprites.exe" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -34,14 +34,13 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="../HelloWorld" prefix_auto="1" extension_auto="1" />
+				<Option output="../Sprites.exe" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-march=corei7" />
-					<Add option="-fexpensive-optimizations" />
 					<Add option="-m32" />
 					<Add directory="../../" />
 				</Compiler>
@@ -64,7 +63,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="HelloWorld.cpp" />
+		<Unit filename="sprites.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
