--- a/DUGL.cbp
+++ b/DUGL.cbp
@@ -68,7 +68,7 @@
 		<Unit filename="DCONTAIN.h" />
 		<Unit filename="DCONV.h" />
 		<Unit filename="DCORE.h" />
-		<Unit filename="DCORE2.h" />
+		<Unit filename="DCORES.h" />
 		<Unit filename="DFONT.h" />
 		<Unit filename="DGUTILS.asm">
 			<Option compile="0" />
@@ -101,6 +101,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="conv.asm" />
+		<Unit filename="coresc.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="fasthzline16.asm">
 			<Option compile="0" />
 			<Option link="0" />
@@ -116,6 +119,8 @@
 		<Unit filename="graph.asm" />
 		<Unit filename="graphM.asm" />
 		<Unit filename="graph_C2.asm" />
+		<Unit filename="graph_C3.asm" />
+		<Unit filename="graph_C4.asm" />
 		<Unit filename="hzline16.asm">
 			<Option compile="0" />
 			<Option link="0" />
