--- a/TESTS/Sprites/Sprites.cbp
+++ b/TESTS/Sprites/Sprites.cbp
@@ -14,6 +14,7 @@
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
+					<Add option="-m32" />
 					<Add option="-g" />
 					<Add directory="../../" />
 				</Compiler>
@@ -26,10 +27,8 @@
 					<Add library="DUGL" />
 					<Add library="SDL2Main" />
 					<Add library="SDL2.dll" />
-					<Add library="user32" />
-					<Add library="gdi32" />
-					<Add library="winmm" />
-					<Add library="dxguid" />
+					<Add library="png" />
+					<Add library="zlib" />
 					<Add directory="../../bin/Debug/" />
 				</Linker>
 			</Target>
@@ -55,13 +54,14 @@
 					<Add library="DUGL" />
 					<Add library="SDL2Main" />
 					<Add library="SDL2.dll" />
+					<Add library="png" />
+					<Add library="zlib" />
 					<Add directory="../../bin/Release/" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="sprites.cpp" />
 		<Extensions>
