--- a/DUGL_Linux.cbp
+++ b/DUGL_Linux.cbp
@@ -46,7 +46,7 @@
 		<Unit filename="DCONTAIN.h" />
 		<Unit filename="DCONV.h" />
 		<Unit filename="DCORE.h" />
-		<Unit filename="DCORE2.h" />
+		<Unit filename="DCORES.h" />
 		<Unit filename="DFONT.h" />
 		<Unit filename="DGUTILS.asm">
 			<Option compile="0" />
@@ -79,6 +79,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="conv.asm" />
+		<Unit filename="coresc.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="fasthzline16.asm">
 			<Option compile="0" />
 			<Option link="0" />
@@ -94,6 +97,8 @@
 		<Unit filename="graph.asm" />
 		<Unit filename="graphM.asm" />
 		<Unit filename="graph_C2.asm" />
+		<Unit filename="graph_C3.asm" />
+		<Unit filename="graph_C4.asm" />
 		<Unit filename="hzline16.asm">
 			<Option compile="0" />
 			<Option link="0" />
