--- a/TESTS/Sprites/Sprites.cbp
+++ b/TESTS/Sprites/Sprites.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../Sprites.exe" prefix_auto="0" extension_auto="0" />
+				<Option output="../Sprites" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -33,13 +33,14 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="../Sprites.exe" prefix_auto="0" extension_auto="0" />
+				<Option output="../Sprites" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-march=corei7" />
+					<Add option="-fexpensive-optimizations" />
 					<Add option="-m32" />
 					<Add directory="../../" />
 				</Compiler>
@@ -62,6 +63,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="sprites.cpp" />
 		<Extensions>
